--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.2
   slide_countdown_clock: ^1.0.3
   google_fonts: ^1.1.1
+  snapping_sheet: ^2.0.1
 
 dev_dependencies:
   flutter_test:
