+ schedule - showing next NOT yet AIRED episode,
* minor fixes: textfield padding,
text padding,

+ last searches redesign, fully working now

+ sorting button floats on bottom,

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
      - waiting.flr
      - blink.flr
      - empty.flr
+     - empty-blue.flr
      - showtime-avatar.png
   #   - images/a_dot_ham.jpeg
 
