--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,16 @@ dependencies:
   fl_chart: ^0.12.0
   intl: ^0.16.1
   provider: ^4.3.2+2
+  local_auth: ^0.6.3+4
+  sqflite: ^1.3.2+1
+  floor: ^0.18.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  floor_generator: ^0.18.0
+  build_runner: ^1.10.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
