--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ dependencies:
   local_auth: ^0.6.3+4
   sqflite: ^1.3.2+1
   floor: ^0.18.0
+  google_sign_in: ^4.5.6
+  adaptive_dialog: ^0.9.3
 
 dev_dependencies:
   flutter_test:
@@ -103,6 +105,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - assets/
      - showTIME.png
      - showTIMEsmall.png
      - no internet.flr
@@ -116,6 +119,7 @@ flutter:
      - loadingcouch-white.flr
      - flowingbg.flr
      - showtime-avatar.png
+     - google_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
