--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,8 +82,9 @@ dependencies:
   local_auth: ^0.6.3+4
   sqflite: ^1.3.2+1
   floor: ^0.18.0
-  google_sign_in: ^4.5.6
+  google_sign_in: ^4.5.9
   adaptive_dialog: ^0.9.3
+  blurrycontainer: ^0.0.1
 
 dev_dependencies:
   flutter_test:
