--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,60 +27,56 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  carousel_slider: ^2.2.1
-  percent_indicator: ^2.1.5
+  carousel_slider: ^2.3.3
+  percent_indicator: ^2.1.9
   sliding_up_panel: ^1.0.2
   animations: ^1.1.2
   flip_card: ^0.4.4
-#  numberpicker: ^1.2.1
-  firebase_core: ^0.5.0
-  cloud_firestore: ^0.14.0+2
-#  cool_alert: ^1.0.1
-#  rich_alert: ^0.1.32
-  status_alert: ^0.1.2
-  grouped_list: ^3.3.0
-  font_awesome_flutter: ^8.8.1
+  firebase_core: ^0.7.0
+  cloud_firestore: ^0.16.0
+  status_alert: ^0.1.3
+  grouped_list: ^3.7.1
+  font_awesome_flutter: ^8.11.0
   autocomplete_textfield: ^1.7.3
-  chips_choice: ^1.2.0
-  connectivity: ^0.4.9+3
-  fluttertoast: ^7.1.1
+  chips_choice: ^2.0.1
+  connectivity: ^2.0.2
+  fluttertoast: ^7.1.6
   flutter_multi_carousel: ^1.0.3
   palette_generator: ^0.2.3
-  pull_to_refresh: ^1.6.0
-  html: ^0.14.0+3
-  simple_animations: ^2.2.1
+  html: ^0.14.0+4
+  simple_animations: ^2.5.0
   expandable: ^4.1.4
   flutter_staggered_animations: ^0.1.2
-  animate_icons: ^0.0.4
+  animate_icons: ^1.0.0
   carousel_pro: ^1.0.0
   flip_panel: ^1.0.1
   auto_search: ^1.0.6
-  shimmer: ^1.1.1
+  shimmer: ^1.1.2
   flutter_login: ^1.0.14
-  firebase_auth: ^0.18.0+1
-  flutter_animated_dialog: ^1.1.0
+  firebase_auth: ^0.20.0+1
+  flutter_animated_dialog: ^1.2.0
   circular_check_box: ^1.0.4
-  animated_size_and_fade: ^1.1.3
-  email_validator: ^1.0.0
-  flutter_secure_storage: ^3.3.4
+  animated_size_and_fade: ^1.1.4
+  email_validator: ^1.0.6
+  flutter_secure_storage: ^3.3.5
   auto_size_text: ^2.1.0
   cupertino_stepper: ^0.1.2
   auto_animated: ^2.1.0
-  cached_network_image: ^2.3.2+1
-  flutter_staggered_grid_view: ^0.3.2
+  cached_network_image: ^2.5.0
+  flutter_staggered_grid_view: ^0.3.3
   slide_countdown_clock: ^1.0.3
-  google_fonts: ^1.1.1
-  snapping_sheet: ^2.0.1
+  google_fonts: ^1.1.2
+  snapping_sheet: ^2.0.2
 #  sticky_grouped_list: ^1.2.0
   sticky_and_expandable_list: ^0.2.3
-  google_nav_bar: ^3.1.0
-  progress_state_button: ^1.0.1
+  google_nav_bar: ^3.2.0
+  progress_state_button: ^1.0.2
   tab_indicator_styler: ^1.0.0
-  fl_chart: ^0.12.0
+  fl_chart: ^0.12.2
   intl: ^0.16.1
-  provider: ^4.3.2+2
+  provider: ^4.3.3
   local_auth: ^0.6.3+4
-  sqflite: ^1.3.2+1
+  sqflite: ^1.3.2+2
   floor: ^0.18.0
   google_sign_in: ^4.5.9
   adaptive_dialog: ^0.9.3
@@ -90,7 +86,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   floor_generator: ^0.18.0
-  build_runner: ^1.10.3
+  build_runner: ^1.11.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -121,6 +117,7 @@ flutter:
      - flowingbg.flr
      - showtime-avatar.png
      - google_logo.png
+     - fingerprint.flr
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
