--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  carousel_slider: ^2.3.3
-  percent_indicator: ^2.1.9
+  carousel_slider: ^3.0.0
+  percent_indicator: ^2.1.9+1
   sliding_up_panel: ^1.0.2
   animations: ^1.1.2
   flip_card: ^0.4.4
@@ -60,10 +60,9 @@ dependencies:
   email_validator: ^1.0.6
   flutter_secure_storage: ^3.3.5
   auto_size_text: ^2.1.0
-  cupertino_stepper: ^0.1.2
   auto_animated: ^2.1.0
   cached_network_image: ^2.5.0
-  flutter_staggered_grid_view: ^0.3.3
+  flutter_staggered_grid_view: ^0.3.4
   slide_countdown_clock: ^1.0.3
   google_fonts: ^1.1.2
   snapping_sheet: ^2.0.2
@@ -76,17 +75,19 @@ dependencies:
   intl: ^0.16.1
   provider: ^4.3.3
   local_auth: ^0.6.3+4
-  sqflite: ^1.3.2+2
+  sqflite: ^1.3.2+3
   floor: ^0.18.0
   google_sign_in: ^4.5.9
   adaptive_dialog: ^0.9.3
   blurrycontainer: ^0.0.1
+  timelines: ^0.0.2+1
+  get: ^3.24.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   floor_generator: ^0.18.0
-  build_runner: ^1.11.0
+  build_runner: ^1.11.1
 
 
 # For information on the generic Dart part of this file, see the
