--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: eWoke
+name: show_time
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.9.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,67 +27,81 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+
+
+
+  # UI elements / widgets
   carousel_slider: ^3.0.0
   percent_indicator: ^2.1.9+1
   sliding_up_panel: ^1.0.2
-  animations: ^1.1.2
   flip_card: ^0.4.4
-  firebase_core: ^0.7.0
-  cloud_firestore: ^0.16.0
   status_alert: ^0.1.3
-  grouped_list: ^3.7.1
   font_awesome_flutter: ^8.11.0
   autocomplete_textfield: ^1.7.3
   chips_choice: ^2.0.1
-  connectivity: ^2.0.2
-  fluttertoast: ^7.1.6
-  flutter_multi_carousel: ^1.0.3
-  palette_generator: ^0.2.3
-  html: ^0.14.0+4
-  simple_animations: ^2.5.0
-  expandable: ^4.1.4
-  flutter_staggered_animations: ^0.1.2
-  animate_icons: ^1.0.0
-  carousel_pro: ^1.0.0
+  fluttertoast: ^7.1.8
   flip_panel: ^1.0.1
-  auto_search: ^1.0.6
-  shimmer: ^1.1.2
-  flutter_login: ^1.0.14
-  firebase_auth: ^0.20.0+1
-  flutter_animated_dialog: ^1.2.0
+  expandable: ^4.1.4
+  shimmer: ^2.0.0-nullsafety.0
   circular_check_box: ^1.0.4
-  animated_size_and_fade: ^1.1.4
-  email_validator: ^1.0.6
-  flutter_secure_storage: ^3.3.5
   auto_size_text: ^2.1.0
-  auto_animated: ^2.1.0
-  cached_network_image: ^2.5.0
+  cached_network_image: ^3.0.0-nullsafety
   flutter_staggered_grid_view: ^0.3.4
   slide_countdown_clock: ^1.0.3
-  google_fonts: ^1.1.2
-  snapping_sheet: ^2.0.2
-#  sticky_grouped_list: ^1.2.0
-  sticky_and_expandable_list: ^0.2.3
-  google_nav_bar: ^3.2.0
   progress_state_button: ^1.0.2
   tab_indicator_styler: ^1.0.0
-  fl_chart: ^0.12.2
-  intl: ^0.16.1
-  provider: ^4.3.3
-  local_auth: ^0.6.3+4
-  sqflite: ^1.3.2+3
-  floor: ^0.18.0
-  google_sign_in: ^4.5.9
-  adaptive_dialog: ^0.9.3
+  fl_chart: ^0.20.1
+#  adaptive_dialog: ^0.10.0+5
   blurrycontainer: ^0.0.1
   timelines: ^0.0.2+1
-  get: ^3.24.0
+  # UI elements / widgets
+
+  # Firebase & Stuff
+  firebase_core: ^1.0.1
+  cloud_firestore: ^1.0.1
+  cloud_firestore_web: ^1.0.1
+  firebase_auth: ^1.0.1
+  # Firebase & Stuff
+
+  # Services
+  connectivity: ^3.0.2
+  html: ^0.15.0
+  email_validator: ^1.0.6
+  flutter_secure_storage: ^4.1.0
+  intl: ^0.17.0
+  local_auth: ^1.1.0
+  floor: ^1.0.0
+#
+  provider: ^5.0.0
+  get: ^4.0.0-nullsafety.2
+  # Services
+
+  # Animations
+  animations: ^2.0.0
+  simple_animations: ^3.0.1
+  flutter_staggered_animations: ^1.0.0
+  flutter_animated_dialog: ^2.0.0
+  animated_size_and_fade: ^2.0.0
+  animate_icons: ^1.0.2
+  auto_animated: ^3.0.0
+  # Animations
+
+  # Google packages
+  google_fonts: ^2.0.0
+  google_nav_bar: ^5.0.2
+  google_sign_in: ^5.0.0
+
+
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  floor_generator: ^0.18.0
-  build_runner: ^1.11.1
+  floor_generator: ^1.0.0
+  build_runner: ^1.11.5
 
 
 # For information on the generic Dart part of this file, see the
