--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,37 +24,27 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-
-
-
-
   # UI elements / widgets
-  carousel_slider: ^3.0.0
-  percent_indicator: ^2.1.9+1
-  sliding_up_panel: ^1.0.2
-  flip_card: ^0.4.4
-  status_alert: ^0.1.3
-  font_awesome_flutter: ^8.11.0
+  carousel_slider: ^4.0.0-nullsafety.0
+#  sliding_up_panel: ^1.0.2  # not yet null safety  :(
+  sliding_sheet: ^0.5.0
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  fluttertoast: ^8.0.1-nullsafety.0
+  font_awesome_flutter: ^9.0.0-nullsafety
+  percent_indicator: ^3.3.0-nullsafety.1
+#  status_alert: ^0.1.3
   autocomplete_textfield: ^1.7.3
   chips_choice: ^2.0.1
-  fluttertoast: ^7.1.8
   flip_panel: ^1.0.1
   expandable: ^4.1.4
   shimmer: ^2.0.0-nullsafety.0
   circular_check_box: ^1.0.4
-  auto_size_text: ^2.1.0
+  auto_size_text: ^3.0.0-nullsafety.0
   cached_network_image: ^3.0.0-nullsafety
-  flutter_staggered_grid_view: ^0.3.4
   slide_countdown_clock: ^1.0.3
-  progress_state_button: ^1.0.2
-  tab_indicator_styler: ^1.0.0
   fl_chart: ^0.20.1
-#  adaptive_dialog: ^0.10.0+5
-  blurrycontainer: ^0.0.1
-  timelines: ^0.0.2+1
+  timeline_tile: ^2.0.0
+  roundcheckbox: ^2.0.0-nullsafety.0
   # UI elements / widgets
 
   # Firebase & Stuff
@@ -67,7 +57,7 @@ dependencies:
   # Services
   connectivity: ^3.0.2
   html: ^0.15.0
-  email_validator: ^1.0.6
+  email_validator: ^2.0.1
   flutter_secure_storage: ^4.1.0
   intl: ^0.17.0
   local_auth: ^1.1.0
@@ -79,17 +69,18 @@ dependencies:
 
   # Animations
   animations: ^2.0.0
-  simple_animations: ^3.0.1
+  simple_animations: ^3.0.2
   flutter_staggered_animations: ^1.0.0
   flutter_animated_dialog: ^2.0.0
   animated_size_and_fade: ^2.0.0
-  animate_icons: ^1.0.2
+  animate_icons: ^2.0.0
   auto_animated: ^3.0.0
+  flare_flutter: ^3.0.0-nullsafety.0
   # Animations
 
   # Google packages
   google_fonts: ^2.0.0
-  google_nav_bar: ^5.0.2
+  google_nav_bar: ^5.0.3
   google_sign_in: ^5.0.0
 
 
