--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,33 +29,38 @@ dependencies:
 #  sliding_up_panel: ^1.0.2  # not yet null safety  :(
   sliding_sheet: ^0.5.0
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
-  fluttertoast: ^8.0.1-nullsafety.0
-  font_awesome_flutter: ^9.0.0-nullsafety
+  fluttertoast: ^8.0.3
+  font_awesome_flutter: ^9.0.0
   percent_indicator: ^3.3.0-nullsafety.1
 #  status_alert: ^0.1.3
   autocomplete_textfield: ^1.7.3
   chips_choice: ^2.0.1
   flip_panel: ^1.0.1
-  expandable: ^4.1.4
+  expandable: ^5.0.1
   shimmer: ^2.0.0-nullsafety.0
   circular_check_box: ^1.0.4
   auto_size_text: ^3.0.0-nullsafety.0
-  cached_network_image: ^3.0.0-nullsafety
+  cached_network_image: ^3.0.0
   slide_countdown_clock: ^1.0.3
   fl_chart: ^0.20.1
   timeline_tile: ^2.0.0
   roundcheckbox: ^2.0.0-nullsafety.0
+  hovering: ^1.0.4
+  material_floating_search_bar: ^0.3.3
+  multi_select_flutter: ^4.0.0
+  syncfusion_flutter_sliders: ^19.1.54-beta
+  syncfusion_flutter_gauges: ^19.1.54+1
   # UI elements / widgets
 
   # Firebase & Stuff
-  firebase_core: ^1.0.1
-  cloud_firestore: ^1.0.1
-  cloud_firestore_web: ^1.0.1
+  firebase_core: ^1.0.2
+  cloud_firestore: ^1.0.3
+  cloud_firestore_web: ^1.0.3
   firebase_auth: ^1.0.1
   # Firebase & Stuff
 
   # Services
-  connectivity: ^3.0.2
+  connectivity: ^3.0.3
   html: ^0.15.0
   email_validator: ^2.0.1
   flutter_secure_storage: ^4.1.0
@@ -64,24 +69,24 @@ dependencies:
   floor: ^1.0.0
 #
   provider: ^5.0.0
-  get: ^4.0.0-nullsafety.2
+  get: ^4.1.3
   # Services
 
   # Animations
   animations: ^2.0.0
-  simple_animations: ^3.0.2
+  simple_animations: ^3.0.3
   flutter_staggered_animations: ^1.0.0
   flutter_animated_dialog: ^2.0.0
   animated_size_and_fade: ^2.0.0
   animate_icons: ^2.0.0
   auto_animated: ^3.0.0
-  flare_flutter: ^3.0.0-nullsafety.1
+  flare_flutter: ^3.0.0
   # Animations
 
   # Google packages
   google_fonts: ^2.0.0
   google_nav_bar: ^5.0.3
-  google_sign_in: ^5.0.0
+  google_sign_in: ^5.0.1
 
 
 
