--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   percent_indicator: ^3.3.0-nullsafety.1
   #  status_alert: ^0.1.3
+  fade_shimmer: ^2.0.1
   autocomplete_textfield: ^1.7.3
   chips_choice: ^2.0.1
   flip_panel: ^1.0.1
@@ -57,10 +58,8 @@ dependencies:
   intl: ^0.17.0
   local_auth: ^1.1.5
   floor: ^1.0.1
-  #
-  # provider: ^5.0.0
-  get: ^4.3.8
   flutter_bloc: ^7.3.0
+  equatable: ^2.0.3
   bloc: ^7.2.0
   # Services
   get_it: ^7.2.0
