--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,83 +1,67 @@
 name: show_time
-description: A new Flutter project.
+description: Track your favorite shows & episodes with ease.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.0.3+1
+version: 1.0.4+1
 
 environment:
-  sdk: ">=2.13.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # UI elements / widgets
+  # ! UI elements / widgets
   carousel_slider: ^4.1.1
   sliding_up_panel: ^2.0.0+1
-  sliding_sheet: ^0.5.0
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   fluttertoast: ^8.0.6
   font_awesome_flutter: ^9.0.0
-  percent_indicator: ^3.3.0-nullsafety.1
-  #  status_alert: ^0.1.3
+  percent_indicator: ^4.0.1
   fade_shimmer: ^2.0.1
-  autocomplete_textfield: ^1.7.3
-  chips_choice: ^2.0.1
-  flip_panel: ^1.0.1
-  expandable: ^5.0.1
   shimmer: ^2.0.0
-  circular_check_box: ^1.0.4
   auto_size_text: ^3.0.0-nullsafety.0
   cached_network_image: ^3.0.0
-  slide_countdown_clock: ^1.0.3
   fl_chart: ^0.36.3
   timeline_tile: ^2.0.0
-  roundcheckbox: ^2.0.2+1
+  roundcheckbox: ^2.0.5
   hovering: ^1.0.4
-  material_floating_search_bar: ^0.3.4
-  multi_select_flutter: ^4.0.0
-  syncfusion_flutter_sliders: ^19.2.56
-  syncfusion_flutter_gauges: ^19.2.56
-  # UI elements / widgets
+  syncfusion_flutter_sliders: ^20.2.46
+  syncfusion_flutter_gauges: ^20.2.46
 
-  # Firebase & Stuff
+  # ! Firebase & Stuff
   firebase_core: "1.12.0"
   firebase_core_platform_interface: "4.2.4"
   cloud_firestore: "3.1.9"
   cloud_firestore_web: ^2.6.5
   firebase_auth: "3.3.8"
-  # Firebase & Stuff
 
-  # Services
+  # ! Services
   connectivity: ^3.0.3
   html: ^0.15.0
   email_validator: ^2.0.1
   flutter_secure_storage: ^4.2.0
   intl: ^0.17.0
   local_auth: ^1.1.5
-  floor: ^1.0.1
+  floor: ^1.3.0
   flutter_bloc: ^7.3.0
   equatable: ^2.0.3
   bloc: ^7.2.0
-  # Services
   get_it: ^7.2.0
   dartz: ^0.10.1
   internet_connection_checker: ^0.0.1+3
 
-  # Animations
+  # ! Animations
   animations: ^2.0.1
   simple_animations: ^3.1.1
   flutter_staggered_animations: ^1.0.0
   flutter_animated_dialog: ^2.0.0
   animated_size_and_fade: ^2.0.0
-  animate_icons: ^2.0.0
-  auto_animated: ^3.0.0
   flare_flutter: ^3.0.0
-  # Animations
 
-  # Google packages
+  # ! Google packages
   google_fonts: ^2.0.0
   google_nav_bar: ^5.0.4
   google_sign_in: ^5.0.7
@@ -85,8 +69,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  floor_generator: ^1.0.1
-  build_runner: ^1.11.5
+  floor_generator: ^1.3.0
+  build_runner: ^2.1.2
+  dependency_validator: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
