--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,55 +16,55 @@ dependencies:
   # ! UI elements / widgets
   carousel_slider: ^4.1.1
   sliding_up_panel: ^2.0.0+1
-  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  flutter_staggered_grid_view: ^0.6.2
   fluttertoast: ^8.0.6
-  font_awesome_flutter: ^9.0.0
+  font_awesome_flutter: ^10.4.0
   percent_indicator: ^4.0.1
   fade_shimmer: ^2.0.1
   shimmer: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   cached_network_image: ^3.0.0
-  fl_chart: ^0.36.3
+  fl_chart: ^0.62.0
   timeline_tile: ^2.0.0
   roundcheckbox: ^2.0.5
   hovering: ^1.0.4
-  syncfusion_flutter_sliders: ^20.2.46
-  syncfusion_flutter_gauges: ^20.2.46
+  syncfusion_flutter_sliders: ^21.2.3
+  syncfusion_flutter_gauges: ^21.2.3
 
   # ! Firebase & Stuff
-  firebase_core: "1.12.0"
-  firebase_core_platform_interface: "4.2.4"
-  cloud_firestore: "3.1.9"
-  cloud_firestore_web: ^2.6.5
-  firebase_auth: "3.3.8"
+  firebase_core: ^2.11.0
+  firebase_core_platform_interface: ^4.2.4
+  cloud_firestore: ^4.6.0
+  cloud_firestore_web: ^3.4.3
+  firebase_auth: ^4.2.2
 
   # ! Services
   connectivity: ^3.0.3
   html: ^0.15.0
   email_validator: ^2.0.1
-  flutter_secure_storage: ^4.2.0
-  intl: ^0.17.0
-  local_auth: ^1.1.5
+  flutter_secure_storage: ^8.0.0
+  intl: ^0.18.1
+  local_auth: ^2.1.6
   floor: ^1.3.0
-  flutter_bloc: ^7.3.0
+  flutter_bloc: ^8.1.2
   equatable: ^2.0.3
-  bloc: ^7.2.0
+  bloc: ^8.1.1
   get_it: ^7.2.0
   dartz: ^0.10.1
-  internet_connection_checker: ^0.0.1+3
+  internet_connection_checker: ^1.0.0+1
 
   # ! Animations
   animations: ^2.0.1
-  simple_animations: ^3.1.1
+  simple_animations: ^5.0.0+3
   flutter_staggered_animations: ^1.0.0
   flutter_animated_dialog: ^2.0.0
-  animated_size_and_fade: ^2.0.0
+  animated_size_and_fade: ^3.0.1
   flare_flutter: ^3.0.0
 
   # ! Google packages
-  google_fonts: ^2.0.0
+  google_fonts: ^4.0.4
   google_nav_bar: ^5.0.4
-  google_sign_in: ^5.0.7
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -85,22 +85,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-    - showTIME.png
-    - showTIMEsmall.png
-    - no internet.flr
-    - notfound.flr
-    - waiting.flr
-    - blink.flr
-    - empty.flr
-    - empty-blue.flr
-    - ohno.flr
-    - loadingcouch.flr
-    - loadingcouch-white.flr
-    - flowingbg.flr
-    - showtime-avatar.png
-    - google_logo.png
-    - fingerprint.flr
+    - assets/images/
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
